--- a/LLM_evaluation_data.ipynb
+++ b/LLM_evaluation_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -29,6 +29,7 @@
        "      <th>response</th>\n",
        "      <th>timestamp</th>\n",
        "      <th>prompt_file</th>\n",
+       "      <th>model</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -37,20 +38,144 @@
        "      <td>{\"items\":[{\"shape_ID\":\"30\",\"explanation\":\"This...</td>\n",
        "      <td>2025-02-25 18:14:17.251858</td>\n",
        "      <td>evaluation_instructions_with_shapes_v1.txt</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{\"items\":[{\"shape\":\"Shape ID: 896 896 256 896\"...</td>\n",
+       "      <td>2025-02-26 10:43:37.501983</td>\n",
+       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{\"items\":[{\"shape\":\"Shape ID: 256 896 256 896 ...</td>\n",
+       "      <td>2025-02-26 10:46:52.949819</td>\n",
+       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{\"items\":[{\"shape\":\"Shape ID: 896 896 256 896\\...</td>\n",
+       "      <td>2025-02-26 11:00:19.264971</td>\n",
+       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{\"items\":[{\"shape\":\"1023\",\"explanation\":\"This ...</td>\n",
+       "      <td>2025-02-26 12:06:52.040203</td>\n",
+       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>{'error': 'An error occurred: Error code: 400 ...</td>\n",
+       "      <td>2025-02-26 14:30:59.394476</td>\n",
+       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
+       "      <td>gpt-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>{'error': 'An error occurred: Error code: 404 ...</td>\n",
+       "      <td>2025-02-26 14:31:46.264981</td>\n",
+       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
+       "      <td>o1-2024-12-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>{\"items\":[{\"shape\":\"Shape ID: 128 896 640 896 ...</td>\n",
+       "      <td>2025-02-26 14:32:19.287146</td>\n",
+       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
+       "      <td>gpt-4o-mini</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>{\"items\":[{\"shape\":\"Shape ID: 256 896 256 896 ...</td>\n",
+       "      <td>2025-02-26 15:18:13.945288</td>\n",
+       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
+       "      <td>gpt-4o-mini</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>{\"items\":[{\"shape\":\"1023\",\"explanation\":\"This ...</td>\n",
+       "      <td>2025-02-26 15:20:54.026172</td>\n",
+       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
+       "      <td>gpt-4o-mini</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>{\"items\":[{\"shape\":\"1023\",\"explanation\":\"This ...</td>\n",
+       "      <td>2025-02-26 15:22:55.375258</td>\n",
+       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
+       "      <td>gpt-4o-mini</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>{\"items\":[{\"shape\":\"Shape ID: 1023, Matrix: 11...</td>\n",
+       "      <td>2025-02-26 15:30:42.827861</td>\n",
+       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
+       "      <td>gpt-4o-mini</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>{\"items\":[{\"shape\":\"Shape ID: 1023\\nMatrix:\\n1...</td>\n",
+       "      <td>2025-02-26 15:32:40.079859</td>\n",
+       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
+       "      <td>gpt-4o-mini</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                            response  \\\n",
-       "0  {\"items\":[{\"shape_ID\":\"30\",\"explanation\":\"This...   \n",
+       "                                             response  \\\n",
+       "0   {\"items\":[{\"shape_ID\":\"30\",\"explanation\":\"This...   \n",
+       "1   {\"items\":[{\"shape\":\"Shape ID: 896 896 256 896\"...   \n",
+       "2   {\"items\":[{\"shape\":\"Shape ID: 256 896 256 896 ...   \n",
+       "3   {\"items\":[{\"shape\":\"Shape ID: 896 896 256 896\\...   \n",
+       "4   {\"items\":[{\"shape\":\"1023\",\"explanation\":\"This ...   \n",
+       "5   {'error': 'An error occurred: Error code: 400 ...   \n",
+       "6   {'error': 'An error occurred: Error code: 404 ...   \n",
+       "7   {\"items\":[{\"shape\":\"Shape ID: 128 896 640 896 ...   \n",
+       "8   {\"items\":[{\"shape\":\"Shape ID: 256 896 256 896 ...   \n",
+       "9   {\"items\":[{\"shape\":\"1023\",\"explanation\":\"This ...   \n",
+       "10  {\"items\":[{\"shape\":\"1023\",\"explanation\":\"This ...   \n",
+       "11  {\"items\":[{\"shape\":\"Shape ID: 1023, Matrix: 11...   \n",
+       "12  {\"items\":[{\"shape\":\"Shape ID: 1023\\nMatrix:\\n1...   \n",
        "\n",
-       "                   timestamp                                 prompt_file  \n",
-       "0 2025-02-25 18:14:17.251858  evaluation_instructions_with_shapes_v1.txt  "
+       "                    timestamp                                 prompt_file  \\\n",
+       "0  2025-02-25 18:14:17.251858  evaluation_instructions_with_shapes_v1.txt   \n",
+       "1  2025-02-26 10:43:37.501983  evaluation_instructions_with_shapes_v2.txt   \n",
+       "2  2025-02-26 10:46:52.949819  evaluation_instructions_with_shapes_v2.txt   \n",
+       "3  2025-02-26 11:00:19.264971  evaluation_instructions_with_shapes_v2.txt   \n",
+       "4  2025-02-26 12:06:52.040203  evaluation_instructions_with_shapes_v2.txt   \n",
+       "5  2025-02-26 14:30:59.394476  evaluation_instructions_with_shapes_v2.txt   \n",
+       "6  2025-02-26 14:31:46.264981  evaluation_instructions_with_shapes_v2.txt   \n",
+       "7  2025-02-26 14:32:19.287146  evaluation_instructions_with_shapes_v2.txt   \n",
+       "8  2025-02-26 15:18:13.945288  evaluation_instructions_with_shapes_v2.txt   \n",
+       "9  2025-02-26 15:20:54.026172  evaluation_instructions_with_shapes_v2.txt   \n",
+       "10 2025-02-26 15:22:55.375258  evaluation_instructions_with_shapes_v2.txt   \n",
+       "11 2025-02-26 15:30:42.827861  evaluation_instructions_with_shapes_v2.txt   \n",
+       "12 2025-02-26 15:32:40.079859  evaluation_instructions_with_shapes_v2.txt   \n",
+       "\n",
+       "            model  \n",
+       "0             NaN  \n",
+       "1             NaN  \n",
+       "2             NaN  \n",
+       "3             NaN  \n",
+       "4             NaN  \n",
+       "5           gpt-4  \n",
+       "6   o1-2024-12-17  \n",
+       "7     gpt-4o-mini  \n",
+       "8     gpt-4o-mini  \n",
+       "9     gpt-4o-mini  \n",
+       "10    gpt-4o-mini  \n",
+       "11    gpt-4o-mini  \n",
+       "12    gpt-4o-mini  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -89,54 +214,89 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>shape_ID</th>\n",
+       "      <th>shape</th>\n",
        "      <th>explanation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>30</td>\n",
-       "      <td>This shape has a unique, symmetrical design that resembles a diamond or a starburst. Its clever use of filled squares creates a sense of balance and harmony.</td>\n",
+       "      <td>Shape ID: 1023\\nMatrix:\\n1111111111</td>\n",
+       "      <td>This shape is visually striking due to its simplicity and uniformity. It represents a solid line that could symbolize stability.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>36</td>\n",
-       "      <td>The compact and repetitive structure of this shape gives it an interesting visual appeal. The columns of filled squares create a sense of solidity and strength.</td>\n",
+       "      <td>Shape ID: 272 1016 64\\nMatrix:\\n0100010000\\n1111111000\\n0001000000</td>\n",
+       "      <td>The central solid part surrounded by spaces gives an interesting pattern reminiscent of a keyhole.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>56</td>\n",
-       "      <td>This shape's vertical symmetry and the varied heights of its filled squares add an artistic touch, reminiscent of a modern sculpture or a city skyline.</td>\n",
+       "      <td>Shape ID: 256 384 960 384 256\\nMatrix:\\n0100000000\\n0110000000\\n1111000000\\n0110000000\\n0100000000</td>\n",
+       "      <td>This shape has a beautiful symmetry resembling a butterfly or a flower.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>90</td>\n",
-       "      <td>With its layered structure, this shape provides a sense of depth and complexity that is visually intriguing. It resembles a layered cake or building, inviting exploration.</td>\n",
+       "      <td>Shape ID: 256 896 256 896 256 256\\nMatrix:\\n0100000000\\n1110000000\\n0100000000\\n1110000000\\n0100000000\\n0100000000</td>\n",
+       "      <td>Its layered design conveys a sense of depth, and the alternating pattern creates visual interest.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>175</td>\n",
-       "      <td>This shape features a dynamic design that captures attention with its unique proportions and alignment. The appearance of movement and flow evokes feelings of creativity and inspiration.</td>\n",
+       "      <td>Shape ID: 896 896 256 896\\nMatrix:\\n1110000000\\n1110000000\\n0100000000\\n1110000000</td>\n",
+       "      <td>The bold shapes are compact and powerful, suggesting a strong structure that is captivating.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Shape ID: 992 448 128 128\\nMatrix:\\n1111100000\\n0111000000\\n0010000000\\n0010000000</td>\n",
+       "      <td>The top-heavy design feels balanced and evokes a skyline or architectural elements.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Shape ID: 640 896 896 256 256\\nMatrix:\\n1010000000\\n1110000000\\n1110000000\\n0100000000\\n0100000000</td>\n",
+       "      <td>This shape has a diverse structure with layers that could represent a coral reef, making it visually appealing.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Shape ID: 768 992 32 32 32\\nMatrix:\\n1100000000\\n1111100000\\n0000100000\\n0000100000\\n0000100000</td>\n",
+       "      <td>The flowing design and gradual taper towards the bottom create a sense of movement, quite beautiful.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Shape ID: 256 896 192 896 256\\nMatrix:\\n0100000000\\n1110000000\\n0011000000\\n1110000000\\n0100000000</td>\n",
+       "      <td>This design is intriguing due to its complex inner structure, resembling a star or multi-dimensional form.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Shape ID: 512 512 768 896 768 512\\nMatrix:\\n1000000000\\n1000000000\\n1100000000\\n1110000000\\n1100000000\\n1000000000</td>\n",
+       "      <td>The circular form with a solid center is reminiscent of a rose or sunflower, symbolizing beauty and nature.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  shape_ID  \\\n",
-       "0       30   \n",
-       "1       36   \n",
-       "2       56   \n",
-       "3       90   \n",
-       "4      175   \n",
+       "                                                                                                                shape  \\\n",
+       "0                                                                                 Shape ID: 1023\\nMatrix:\\n1111111111   \n",
+       "1                                                  Shape ID: 272 1016 64\\nMatrix:\\n0100010000\\n1111111000\\n0001000000   \n",
+       "2                  Shape ID: 256 384 960 384 256\\nMatrix:\\n0100000000\\n0110000000\\n1111000000\\n0110000000\\n0100000000   \n",
+       "3  Shape ID: 256 896 256 896 256 256\\nMatrix:\\n0100000000\\n1110000000\\n0100000000\\n1110000000\\n0100000000\\n0100000000   \n",
+       "4                                  Shape ID: 896 896 256 896\\nMatrix:\\n1110000000\\n1110000000\\n0100000000\\n1110000000   \n",
+       "5                                  Shape ID: 992 448 128 128\\nMatrix:\\n1111100000\\n0111000000\\n0010000000\\n0010000000   \n",
+       "6                  Shape ID: 640 896 896 256 256\\nMatrix:\\n1010000000\\n1110000000\\n1110000000\\n0100000000\\n0100000000   \n",
+       "7                     Shape ID: 768 992 32 32 32\\nMatrix:\\n1100000000\\n1111100000\\n0000100000\\n0000100000\\n0000100000   \n",
+       "8                  Shape ID: 256 896 192 896 256\\nMatrix:\\n0100000000\\n1110000000\\n0011000000\\n1110000000\\n0100000000   \n",
+       "9  Shape ID: 512 512 768 896 768 512\\nMatrix:\\n1000000000\\n1000000000\\n1100000000\\n1110000000\\n1100000000\\n1000000000   \n",
        "\n",
-       "                                                                                                                                                                                  explanation  \n",
-       "0                               This shape has a unique, symmetrical design that resembles a diamond or a starburst. Its clever use of filled squares creates a sense of balance and harmony.  \n",
-       "1                            The compact and repetitive structure of this shape gives it an interesting visual appeal. The columns of filled squares create a sense of solidity and strength.  \n",
-       "2                                     This shape's vertical symmetry and the varied heights of its filled squares add an artistic touch, reminiscent of a modern sculpture or a city skyline.  \n",
-       "3                 With its layered structure, this shape provides a sense of depth and complexity that is visually intriguing. It resembles a layered cake or building, inviting exploration.  \n",
-       "4  This shape features a dynamic design that captures attention with its unique proportions and alignment. The appearance of movement and flow evokes feelings of creativity and inspiration.  "
+       "                                                                                                                        explanation  \n",
+       "0  This shape is visually striking due to its simplicity and uniformity. It represents a solid line that could symbolize stability.  \n",
+       "1                                The central solid part surrounded by spaces gives an interesting pattern reminiscent of a keyhole.  \n",
+       "2                                                           This shape has a beautiful symmetry resembling a butterfly or a flower.  \n",
+       "3                                 Its layered design conveys a sense of depth, and the alternating pattern creates visual interest.  \n",
+       "4                                      The bold shapes are compact and powerful, suggesting a strong structure that is captivating.  \n",
+       "5                                               The top-heavy design feels balanced and evokes a skyline or architectural elements.  \n",
+       "6                   This shape has a diverse structure with layers that could represent a coral reef, making it visually appealing.  \n",
+       "7                              The flowing design and gradual taper towards the bottom create a sense of movement, quite beautiful.  \n",
+       "8                        This design is intriguing due to its complex inner structure, resembling a star or multi-dimensional form.  \n",
+       "9                       The circular form with a solid center is reminiscent of a rose or sunflower, symbolizing beauty and nature.  "
       ]
      },
      "metadata": {},
@@ -147,9 +307,10 @@
     "import json\n",
     "\n",
     "with pd.option_context('display.max_colwidth', None):\n",
-    "    display(pd.DataFrame(json.loads(df['response'].iloc[0])['items']))\n",
+    "    display(pd.DataFrame(json.loads(df['response'].iloc[12])['items']))\n",
     "\n",
-    "# df['response'].apply(lambda x: json.loads(x)['items']).to_list())\n"
+    "# df['response'].apply(lambda x: json.loads(x)['items']).to_list())\n",
+    "# The matrix information is good for viewing the evaluation instructions with shapes, but not good for looking at the df"
    ]
   },
   {
