update: edit evaluation code

--- a/analysis/LLM_evaluation_data.ipynb
+++ b/analysis/LLM_evaluation_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "12    gpt-4o-mini  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1328,7 @@
     "\n",
     "with pd.option_context('display.max_colwidth', None):\n",
     "    display(pd.DataFrame(json.loads(df['response'].iloc[12])['items']))\n",
-    "df.to_csv('GPT4o_selections.csv')\n",
+    "# df.to_csv('GPT4o_selections.csv')\n",
     "\n",
     "\n",
     "# Filter for rows that used GPT-4\n",
