--- a/analysis/LLM_evaluation_data.ipynb
+++ b/analysis/LLM_evaluation_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "12    gpt-4o-mini  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,263 +246,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>response</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>prompt_file</th>\n",
-       "      <th>model</th>\n",
-       "      <th>data_type</th>\n",
-       "      <th>response_dict</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>{\"items\":[{\"shape_ID\":\"30\",\"explanation\":\"This...</td>\n",
-       "      <td>2025-02-25 18:14:17.251858</td>\n",
-       "      <td>evaluation_instructions_with_shapes_v1.txt</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>&lt;class 'str'&gt;</td>\n",
-       "      <td>{'items': [{'shape_ID': '30', 'explanation': '...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>{\"items\":[{\"shape\":\"Shape ID: 896 896 256 896\"...</td>\n",
-       "      <td>2025-02-26 10:43:37.501983</td>\n",
-       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>&lt;class 'str'&gt;</td>\n",
-       "      <td>{'items': [{'shape': 'Shape ID: 896 896 256 89...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>{\"items\":[{\"shape\":\"Shape ID: 256 896 256 896 ...</td>\n",
-       "      <td>2025-02-26 10:46:52.949819</td>\n",
-       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>&lt;class 'str'&gt;</td>\n",
-       "      <td>{'items': [{'shape': 'Shape ID: 256 896 256 89...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>{\"items\":[{\"shape\":\"Shape ID: 896 896 256 896\\...</td>\n",
-       "      <td>2025-02-26 11:00:19.264971</td>\n",
-       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>&lt;class 'str'&gt;</td>\n",
-       "      <td>{'items': [{'shape': 'Shape ID: 896 896 256 89...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>{\"items\":[{\"shape\":\"1023\",\"explanation\":\"This ...</td>\n",
-       "      <td>2025-02-26 12:06:52.040203</td>\n",
-       "      <td>evaluation_instructions_with_shapes_v2.txt</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>&lt;class 'str'&gt;</td>\n",
-       "      <td>{'items': [{'shape': '1023', 'explanation': 'T...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            response  \\\n",
-       "0  {\"items\":[{\"shape_ID\":\"30\",\"explanation\":\"This...   \n",
-       "1  {\"items\":[{\"shape\":\"Shape ID: 896 896 256 896\"...   \n",
-       "2  {\"items\":[{\"shape\":\"Shape ID: 256 896 256 896 ...   \n",
-       "3  {\"items\":[{\"shape\":\"Shape ID: 896 896 256 896\\...   \n",
-       "4  {\"items\":[{\"shape\":\"1023\",\"explanation\":\"This ...   \n",
-       "\n",
-       "                   timestamp                                 prompt_file  \\\n",
-       "0 2025-02-25 18:14:17.251858  evaluation_instructions_with_shapes_v1.txt   \n",
-       "1 2025-02-26 10:43:37.501983  evaluation_instructions_with_shapes_v2.txt   \n",
-       "2 2025-02-26 10:46:52.949819  evaluation_instructions_with_shapes_v2.txt   \n",
-       "3 2025-02-26 11:00:19.264971  evaluation_instructions_with_shapes_v2.txt   \n",
-       "4 2025-02-26 12:06:52.040203  evaluation_instructions_with_shapes_v2.txt   \n",
-       "\n",
-       "  model      data_type                                      response_dict  \n",
-       "0   NaN  <class 'str'>  {'items': [{'shape_ID': '30', 'explanation': '...  \n",
-       "1   NaN  <class 'str'>  {'items': [{'shape': 'Shape ID: 896 896 256 89...  \n",
-       "2   NaN  <class 'str'>  {'items': [{'shape': 'Shape ID: 256 896 256 89...  \n",
-       "3   NaN  <class 'str'>  {'items': [{'shape': 'Shape ID: 896 896 256 89...  \n",
-       "4   NaN  <class 'str'>  {'items': [{'shape': '1023', 'explanation': 'T...  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'items': [{'shape_ID': '30',\n",
-       "   'explanation': 'This shape has a unique, symmetrical design that resembles a diamond or a starburst. Its clever use of filled squares creates a sense of balance and harmony.'},\n",
-       "  {'shape_ID': '36',\n",
-       "   'explanation': 'The compact and repetitive structure of this shape gives it an interesting visual appeal. The columns of filled squares create a sense of solidity and strength.'},\n",
-       "  {'shape_ID': '56',\n",
-       "   'explanation': \"This shape's vertical symmetry and the varied heights of its filled squares add an artistic touch, reminiscent of a modern sculpture or a city skyline.\"},\n",
-       "  {'shape_ID': '90',\n",
-       "   'explanation': 'With its layered structure, this shape provides a sense of depth and complexity that is visually intriguing. It resembles a layered cake or building, inviting exploration.'},\n",
-       "  {'shape_ID': '175',\n",
-       "   'explanation': 'This shape features a dynamic design that captures attention with its unique proportions and alignment. The appearance of movement and flow evokes feelings of creativity and inspiration.'}]}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>shape_ID</th>\n",
-       "      <th>explanation</th>\n",
-       "      <th>shape</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>30</td>\n",
-       "      <td>This shape has a unique, symmetrical design th...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>36</td>\n",
-       "      <td>The compact and repetitive structure of this s...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>56</td>\n",
-       "      <td>This shape's vertical symmetry and the varied ...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>90</td>\n",
-       "      <td>With its layered structure, this shape provide...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>175</td>\n",
-       "      <td>This shape features a dynamic design that capt...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>The top-heavy design feels balanced and evokes...</td>\n",
-       "      <td>Shape ID: 992 448 128 128\\nMatrix:\\n1111100000...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>This shape has a diverse structure with layers...</td>\n",
-       "      <td>Shape ID: 640 896 896 256 256\\nMatrix:\\n101000...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>The flowing design and gradual taper towards t...</td>\n",
-       "      <td>Shape ID: 768 992 32 32 32\\nMatrix:\\n110000000...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>This design is intriguing due to its complex i...</td>\n",
-       "      <td>Shape ID: 256 896 192 896 256\\nMatrix:\\n010000...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>79</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>The circular form with a solid center is remin...</td>\n",
-       "      <td>Shape ID: 512 512 768 896 768 512\\nMatrix:\\n10...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>80 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   shape_ID                                        explanation  \\\n",
-       "0        30  This shape has a unique, symmetrical design th...   \n",
-       "1        36  The compact and repetitive structure of this s...   \n",
-       "2        56  This shape's vertical symmetry and the varied ...   \n",
-       "3        90  With its layered structure, this shape provide...   \n",
-       "4       175  This shape features a dynamic design that capt...   \n",
-       "..      ...                                                ...   \n",
-       "75      NaN  The top-heavy design feels balanced and evokes...   \n",
-       "76      NaN  This shape has a diverse structure with layers...   \n",
-       "77      NaN  The flowing design and gradual taper towards t...   \n",
-       "78      NaN  This design is intriguing due to its complex i...   \n",
-       "79      NaN  The circular form with a solid center is remin...   \n",
-       "\n",
-       "                                                shape  \n",
-       "0                                                 NaN  \n",
-       "1                                                 NaN  \n",
-       "2                                                 NaN  \n",
-       "3                                                 NaN  \n",
-       "4                                                 NaN  \n",
-       "..                                                ...  \n",
-       "75  Shape ID: 992 448 128 128\\nMatrix:\\n1111100000...  \n",
-       "76  Shape ID: 640 896 896 256 256\\nMatrix:\\n101000...  \n",
-       "77  Shape ID: 768 992 32 32 32\\nMatrix:\\n110000000...  \n",
-       "78  Shape ID: 256 896 192 896 256\\nMatrix:\\n010000...  \n",
-       "79  Shape ID: 512 512 768 896 768 512\\nMatrix:\\n10...  \n",
-       "\n",
-       "[80 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Filter out errors, keep only json strings\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata_type\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresponse\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mtype\u001b[39m(x)))\n\u001b[1;32m      5\u001b[0m not_str_mask \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata_type\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mstr\u001b[38;5;241m.\u001b[39mcontains(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstr\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m subset \u001b[38;5;241m=\u001b[39m df[not_str_mask]\u001b[38;5;241m.\u001b[39mcopy()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
