--- a/analysis/LLM_evaluations_Mar9.ipynb
+++ b/analysis/LLM_evaluations_Mar9.ipynb
@@ -1711,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1753,6 +1753,100 @@
     "print(grid_to_string(decode_shape_binaries_str(\"64 96 960 96 64\")))\n",
     "print(grid_to_string(decode_shape_binaries_str(\"320 448 992\")))\n",
     "print(grid_to_string(decode_shape_binaries_str(\"128 960 480 128\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "256 384 960 384 256\n",
+      "\n",
+      "_ ■ _ _ _ _ _ _ _ _\n",
+      "_ ■ ■ _ _ _ _ _ _ _\n",
+      "■ ■ ■ ■ _ _ _ _ _ _\n",
+      "_ ■ ■ _ _ _ _ _ _ _\n",
+      "_ ■ _ _ _ _ _ _ _ _\n",
+      "\n",
+      "528 1008 528\n",
+      "\n",
+      "■ _ _ _ _ ■ _ _ _ _\n",
+      "■ ■ ■ ■ ■ ■ _ _ _ _\n",
+      "■ _ _ _ _ ■ _ _ _ _\n",
+      "\n",
+      "64 96 960 96 64\n",
+      "\n",
+      "_ _ _ ■ _ _ _ _ _ _\n",
+      "_ _ _ ■ ■ _ _ _ _ _\n",
+      "■ ■ ■ ■ _ _ _ _ _ _\n",
+      "_ _ _ ■ ■ _ _ _ _ _\n",
+      "_ _ _ ■ _ _ _ _ _ _\n",
+      "\n",
+      "320 448 992\n",
+      "\n",
+      "_ ■ _ ■ _ _ _ _ _ _\n",
+      "_ ■ ■ ■ _ _ _ _ _ _\n",
+      "■ ■ ■ ■ ■ _ _ _ _ _\n",
+      "\n",
+      "128 960 480 128\n",
+      "\n",
+      "_ _ ■ _ _ _ _ _ _ _\n",
+      "■ ■ ■ ■ _ _ _ _ _ _\n",
+      "_ ■ ■ ■ ■ _ _ _ _ _\n",
+      "_ _ ■ _ _ _ _ _ _ _\n",
+      "\n",
+      "960 128 128 960\n",
+      "\n",
+      "■ ■ ■ ■ _ _ _ _ _ _\n",
+      "_ _ ■ _ _ _ _ _ _ _\n",
+      "_ _ ■ _ _ _ _ _ _ _\n",
+      "■ ■ ■ ■ _ _ _ _ _ _\n",
+      "\n",
+      "1016 584\n",
+      "\n",
+      "■ ■ ■ ■ ■ ■ ■ _ _ _\n",
+      "■ _ _ ■ _ _ ■ _ _ _\n",
+      "\n",
+      "512 512 768 896 768 512\n",
+      "\n",
+      "■ _ _ _ _ _ _ _ _ _\n",
+      "■ _ _ _ _ _ _ _ _ _\n",
+      "■ ■ _ _ _ _ _ _ _ _\n",
+      "■ ■ ■ _ _ _ _ _ _ _\n",
+      "■ ■ _ _ _ _ _ _ _ _\n",
+      "■ _ _ _ _ _ _ _ _ _\n",
+      "\n",
+      "768 992 32 32 32\n",
+      "\n",
+      "■ ■ _ _ _ _ _ _ _ _\n",
+      "■ ■ ■ ■ ■ _ _ _ _ _\n",
+      "_ _ _ _ ■ _ _ _ _ _\n",
+      "_ _ _ _ ■ _ _ _ _ _\n",
+      "_ _ _ _ ■ _ _ _ _ _\n",
+      "\n",
+      "256 896 192 896 256\n",
+      "\n",
+      "_ ■ _ _ _ _ _ _ _ _\n",
+      "■ ■ ■ _ _ _ _ _ _ _\n",
+      "_ _ ■ ■ _ _ _ _ _ _\n",
+      "■ ■ ■ _ _ _ _ _ _ _\n",
+      "_ ■ _ _ _ _ _ _ _ _\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy import shape\n",
+    "\n",
+    "\n",
+    "model_favorites = [\"256 384 960 384 256\", \"528 1008 528\", \"64 96 960 96 64\", \"320 448 992\", \"128 960 480 128\", \"960 128 128 960\", \"1016 584\", \"512 512 768 896 768 512\", \"768 992 32 32 32\", \"256 896 192 896 256\"]\n",
+    "for favorite in model_favorites:\n",
+    "    print(favorite + \"\\n\")\n",
+    "    print(grid_to_string(decode_shape_binaries_str(favorite)))"
    ]
   },
   {
